# kumo

./: .gitignore  Cargo.toml  HACKING.md  README.md  bacon.toml  justfile
.zed/: debug.json  tasks.json
dev/labwc/: autostart  environment  rc.xml
dev/session/kiri/etc/xdg/xdg-miriway/: README
dev/session/kiri/etc/xdg/xdg-miriway/kiri/: miriway-shell.config
dev/session/kiri/usr/share/wayland-sessions/: kiri-miriway.desktop
moya/: Cargo.toml  README.md
moya/src/: error.rs  logger.rs  main.rs  state.rs
moya/src/backend/: drm.rs  mod.rs  winit.rs  x11.rs
moya/src/ui/: cursor.rs  mod.rs
shizuku/: Cargo.toml  README.md  dbus.rs
shizuku/assets/dbus-1/services/: com.fyralabs.shizuku.service
shizuku/assets/systemd/user/: shizukud.service
shizuku/src/: dbus.rs  icon.rs  main.rs  widget.rs
shizuku/src/bus/: dbus.xml
src/: app.rs  main.rs  util.rs  wf_ipc.rs  wf_shell_proto.rs  wf_socket.rs
src/components/: mod.rs
src/components/app_launcher/: appfactory.rs  mod.rs
src/components/bar/: mod.rs
src/components/fleet/: mod.rs
src/ui/: fleet.blp
src/util/: mod.rs  session.rs
src/widgets/: mod.rs
src/widgets/bar/: appicon.blp  bar.blp  imp.rs  mod.rs
src/widgets/clock/: clock.blp  imp.rs  mod.rs
src/widgets/fleet/: fleet.blp  imp.rs  mod.rs
src/widgets/fleet/clock/: imp.rs  mod.rs
src/widgets/fleet/fleet_list/: imp.rs  mod.rs
src/widgets/fleet/tray/: imp.rs  mod.rs
src/widgets/fleet_list/: imp.rs  mod.rs
wayland-wf-shell/: Cargo.toml
wayland-wf-shell/src/: lib.rs
