[package]
name = "kumo"
description = "The Kiri Wayfire Shell"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = { version = "0.15", features = ["clap"] }
lazy_static = "1.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = [
    "tracing",
    "chrono",
    "env-filter",
    "serde",
    "serde_json",
    "tracing-serde",
] }
chrono = { version = "0.4", features = ["serde"] }
xdgkit = "3.2.5"
# appindicator3 = "0.3.0"
libhelium = { workspace = true }
gtk = { workspace = true }
gio = { workspace = true }
glib = { workspace = true }
gtk4-layer-shell = { workspace = true }


[workspace]
members = ["shizuku", "wayland-wf-shell"]

[workspace.dependencies]
gio = "0"
glib = { version = "0.21", features = ["v2_80"] }
gtk4-layer-shell = "^0.5"
libhelium = { version = "0.12.0", features = ["gtk_v4_8", "v1_8"] }


[workspace.dependencies.gtk]
version = "^0.9"
package = "gtk4"
features = ["v4_8", "blueprint"]
