[package]
name = "kumo"
description = "The Kiri Wayfire Shell"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = { version = "0.15", features = ["clap"] }
lazy_static = "1.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = [
    "tracing",
    "chrono",
    "env-filter",
    "serde",
    "serde_json",
    "tracing-serde",
] }
chrono = { version = "0.4", features = ["serde"] }
xdgkit = "3.2.5"
# appindicator3 = "0.3.0"
libhelium = { workspace = true }
gtk = { workspace = true }
relm4 = { workspace = true }
kurage = { workspace = true }
gio = { workspace = true }
glib = { workspace = true }
gtk4-layer-shell = { workspace = true }
zbus_systemd = { version = "0.25701.0", features = ["hostname1", "login1", "systemd1", "timedate1"] }
ulid = "1.2.1"
zbus = { version = "^5.11", features = ["async-io"] }
fork = "0.2.0"
async-channel = "2.5.0"
stable-eyre = "0.2.2"
ashpd = { version = "^0.11", features = ["gtk4", "wayland"] }
tokio = "1.47.1"
zvariant = { version = "^5.7" }


[workspace]
members = ["shizuku", "wayland-wf-shell"]

[workspace.dependencies]
relm4 = { version = "*", features = ["macros"] }
gio = "0.20"
glib = { version = "0.20", features = ["v2_80"] }
gtk4-layer-shell = "^0.5"
libhelium = { version = "0.12.0", features = ["gtk_v4_12", "v1_8"] }
kurage = { git = "https://github.com/FyraLabs/kurage.git", rev = "40f622c" }


[workspace.dependencies.gtk]
version = "^0.9"
package = "gtk4"
features = ["v4_12", "blueprint"]
