[package]
name = "moya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1"
xcursor = { version = "0.3.3", optional = true }
xkbcommon = "0.7.0"
color-eyre = "0.6.3"
calloop = { version = "0.14.0", features = ["async-task"] }
clap = { version = "4.5.7", features = ["derive", "env"] }

[dependencies.smithay]
version = "0.3.0"
git = "https://github.com/Smithay/smithay.git"
rev = "234586dbea6bc084cb72a32f164997e47ea36b2b"
features = [
    "desktop",
    "wayland_frontend",
    "xwayland",
    "winit",
    "backend_vulkan",
    "renderer_glow",
    "backend_egl",
    "backend_drm",
    "backend_libinput",
    "backend_gbm",
    "backend_udev",
]
