[package]
name = "shizuku"
version = "0.1.0"
edition = "2021"
description = "Kiri Notification daemon"
license = "GPL-3.0"

# reference code:
# https://github.com/Toqozz/wired-notify
# https://crates.io/crates/runst

#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
color-eyre = "0.6.2"
gtk4-layer-shell = "0.2.0"
libhelium = { version = "0.1.0", features = ["gtk_v4_10", "v1_6"] }
notify = "6.1.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "chrono", "env-filter", "serde", "serde_json", "tracing-serde"] }
zbus = "3.14.1"

[dependencies.gtk]
version = "0.7.0"
package = "gtk4"
features = ["v4_10"]
