[package]
name = "shizuku"
version = "0.1.0"
edition = "2021"
description = "Kiri Notification daemon"
license = "GPL-3.0"

# set binary name to `shizukud`
[[bin]]
path = "src/main.rs"
name = "shizukud"

# reference code:
# https://github.com/Toqozz/wired-notify
# https://crates.io/crates/runst

#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-std = "1.12.0"
bitflags = "2.4.2"
chrono = "0.4.33"
color-eyre = "0.6.2"
gio = "0.18.4"
glib = { version = "0.18.5", features = ["v2_78"] }
gtk4-layer-shell = "0.2.0"
lazy_static = "1.4.0"
libhelium = { version = "0.1.0", features = ["gtk_v4_10", "v1_6"] }
notify = "6.1.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "chrono",
    "env-filter",
    "serde",
    "serde_json",
    "tracing-serde",
] }
zbus = "3.14.1"
zvariant = "3.15.0"

[dependencies.gtk]
version = "0.7.0"
package = "gtk4"
features = ["v4_10"]
