[package]
name = "shizuku"
version = "0.1.0"
edition = "2021"
description = "Kiri Notification daemon"
license = "GPL-3.0"

# set binary name to `shizukud`
[[bin]]
path = "src/main.rs"
name = "shizukud"

# reference code:
# https://github.com/Toqozz/wired-notify
# https://crates.io/crates/runst

#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-std = "1.12.0"
chrono = "0.4.33"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
notify = "6.1.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "chrono",
    "env-filter",
    "serde",
    "serde_json",
    "tracing-serde",
] }
zbus = "3.14.1"
zvariant = "3.15.0"
libhelium = { workspace = true }

gtk = { workspace = true }
gio = { workspace = true }
glib = { workspace = true }
gtk4-layer-shell = { workspace = true }
