[package]
name = "wayland-wf-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-backend = { version = "0.3.3", features = ["client_system", "log"] }
wayland-client = { version = "0.31.2", features = ["log"] }
wayland-scanner = "0.31.1"