[package]
name = "wayland-wf-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wayfire Shell Wayland protocols"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkg-config = "0.3.29"
wayland-backend = { version = "0.3.3", features = ["client_system", "log"] }
wayland-client = { version = "0.31.2", features = ["log"] }
wayland-scanner = "0.31.1"

# Requires the system package `wayfire` to be installed
# If `wayfire` is not installed, the build will fail. Not even the `-devel` package is enough. unless 


# features

[features]
default = []
system_proto = []
